--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
   <div class="center">
     <div id="homeconteudo">
     
-      <%= image_tag 'img_empresa.png', :id => 'imghome' %>
+      <%= image_tag 'Dinox_1.jpg', :id => 'imghome' %>
       
       <h3>A Empresa</h3>
       
