--- a/app/views/produto/_flambadores.html.erb
+++ b/app/views/produto/_flambadores.html.erb
@@ -63,12 +63,12 @@
                 
         <li>
           <p></p>
-          <%= image_tag 'flambadores/img_1309.JPG' %>
+          <% image_tag 'flambadores/img_1309.JPG' %>
         </li>
         
         <li>
           <p></p>
-          <%= image_tag 'flambadores/img_1315.JPG' %>
+          <% image_tag 'flambadores/img_1315.JPG' %>
         </li>
       </ul>
     </nav>
