--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,15 @@
  *= require_tree .
  */
 
+ #imghome{
+     padding: 0px;
+     border: solid 4px #ffffff;
+     height: 200px;
+     width: 360px;
+     margin-top: 60px;
+     float: right;
+}
+
 body {
     margin: 0px;
     padding: 0px;
