--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -300,14 +300,14 @@ header span a {
 
 .rslides_tabs li:first-child {
   margin-left: 0;
-  }
+}
 
 .rslides_tabs .rslides_here a {
     background: #0073AD;
     color: #0073AD;
     font-weight: bold;
     border: 1px solid;  
-  }
+}
 
 .rslides1_s1 a {
     color: #E6E6E6;
@@ -321,4 +321,39 @@ header span a {
     background: #E6E6E6;
     border: 1px solid;
     text-decoration: none;
+}
+div#caixa-comunicado{
+	display: none;
+	background: #FFFFFF;
+	border-radius: 5px;
+	padding: 1em;
+	position: absolute;
+	top: -10em;
+}
+div.comunicado-dialog{
+	z-index: 999999;
+}
+button.ui-button.ui-widget.ui-state-default.ui-corner-all.ui-button-icon-only.ui-dialog-titlebar-close{
+	display: none;
+}
+div.close{
+	background-image: url("fechar_off.png");
+	background-repeat: no-repeat;
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	float: right;
+}
+div.close:hover{
+	background-image: url("fechar_on.png");
+}
+#background_opacity {
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 100%;
+    z-index: 997;
+    position: absolute;
+    top: 0;
+    display: none;
+    left: 0;
 }
